Fixed spacing issus on 1920*1080p monitors and predictions are more clear

--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -17,6 +17,11 @@
   font-size: 1.5rem
 }
 
+.btn-prediction:hover{
+  background-color: white;
+  border-color:white
+}
+
 .btn-main:hover, .btn-house:hover,.btn-back:hover, .btn-log-out:hover, .btn-prediction:hover{
   text-shadow: none;
 }
